# potluck

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_seed_ingredients.py  003_menu_slot_recipe_cascade.py  004_recipe_freezable.py  005_perishability_categories.py  006_slot_servings_override.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  data.py  import_recipe.py  ingredients.py  menus.py  recipes.py  shopping.py
backend/app/services/: llm.py  menu_planner.py  units.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  helpers.ts  hooks.ts  index.css  main.tsx  sw.ts  types.ts
frontend/src/components/: ImportRecipe.tsx  IngredientList.tsx  Login.tsx  MenuView.tsx  RecipeDetail.tsx  RecipeForm.tsx  RecipeList.tsx  RecipeSearchBar.tsx  Settings.tsx  ShoppingList.tsx  Toast.tsx
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml  traefik.yaml
